This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

24-Nov-2004 (Lars Duening)  (3.3.616)
  - (closure, gcollect.c, interpret.c, prolang) Implemented proper
       closures explicitely referencing inherited functions.

22-Nov-2004 (Lars Duening)  (3.3.615)
  - (comm.c) Efun net_connect(): on multihomed machines the created
       socket is bound to the hostname given with the --hostname option (Bug
       #0000137).

15-Nov-2004 (Lars Duening)  (3.3.614)
  - (efuns.c) You learn a new thing every day: I never realized that
       strtol() supports "+34" and similar - efun to_int() can now
       interpret that again, too (reported by Bardioc).

13-Nov-2004 (Lars Duening)  (3.3.613)
  - (lex.c, efuns.c) Embarassing: the number parsing method assumed that the
       string at least started with a digit - this broken to_int().
       (Bug #0000141)

12-Nov-2004 (Lars Duening)  (3.3.612)
  - (pkg-alists.c) Efun insert_alist() no longer returned the insertion
       position for keys not yet in a key array (reported by Bardioc).

11-Nov-2004 (Lars Duening)  (3.3.611)
  - (efuns.c, lex) Efun to_int() now supports the '0x', '0b', and '0o'
       bases (suggested by Steve Goucher).

30-Oct-2004 (Lars Duening)  (3.3.610)
  - (func_spec, object.c) Introduced the (str, n) form for efun present()
    (Bug #0000134).

26-Oct-2004 (Lars Duening)  (3.3.609)
  - (smalloc.c) Ok, ordering the small block freelists was a bad idea - I
      removed that now. Ordering the large block freelists doesn't seem
      to make a performance difference, so I keep it in for now.

24-Oct-2004 (Lars Duening)  (3.3.608)
  - (backend.c) Reduced the frequence of data-cleanup such that at least
      time_to_clean_up seconds (or 3600 seconds) must have passed since
      the last reference.
  - (smalloc.c) smalloc now supports allocations of 0 byte length (needed
      to replace malloc()).
