@@ -102,7 +102,7 @@ struct lambda_s
 
 /* --- Prototypes --- */
 
-extern long      find_function(string_t *name, program_t *prog);
+extern long      find_function(const string_t *name, const program_t *prog);
 extern Bool      closure_eq (svalue_t * left, svalue_t * right);
 extern int       closure_cmp (svalue_t * left, svalue_t * right);
 extern Bool      lambda_ref_replace_program(lambda_t *l, int type, p_int size, vector_t *args, svalue_t *block);
